<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_stitch_publisher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="haythemboubaker18@gmail.com">farness</maintainer>
  <license>TODO: License declaration</license>
  
  
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <depend>python3-pandas</depend>
  <depend>python3-sklearn</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
